--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,33 +1,19 @@
 ---
 title: 'Introduction'
-description: 'Example section for showcasing API endpoints'
 ---
 
+Welcome to the Glyde Public API, your gateway to seamless financial transactions. This API provides a set of robust and secure endpoints designed to help you initiate payments, manage collections, verify customer information, and perform various financial operations with ease.
+
+With the Glyde API, you can:
+- Initiate collection requests to receive payments securely.
+- Verify customer details, including bank account information.
+- Check wallet balances and monitor transactions.
+- Initiate bank transfers for disbursements.
+- Retrieve a list of supported banks for seamless financial operations.
+- Manage settlements efficiently.
+
 <Note>
-  If you're not looking to build API reference documentation, you can delete
-  this section by removing the api-reference folder.
+  Glyde Environment 
+  - Live Base Url: https://api.useglyde.co/v1
+  - Sandbox Base Url: https://sandbox.useglyde.co/v1
 </Note>
-
-## Welcome
-
-There are two ways to build API documentation: [OpenAPI](https://mintlify.com/docs/api-playground/openapi/setup) and [MDX components](https://mintlify.com/docs/api-playground/mdx/configuration). For the starter kit, we are using the following OpenAPI specification.
-
-<Card
-  title="Plant Store Endpoints"
-  icon="leaf"
-  href="https://github.com/mintlify/starter/blob/main/api-reference/openapi.json"
->
-  View the OpenAPI specification file
-</Card>
-
-## Authentication
-
-All API endpoints are authenticated using Bearer tokens and picked up from the specification file.
-
-```json
-"security": [
-  {
-    "bearerAuth": []
-  }
-]
-```
