--- a/api-reference/errors.mdx
+++ b/api-reference/errors.mdx
@@ -10,7 +10,7 @@ Glyde's API is RESTful and as such, uses conventional HTTP response codes to ind
 |------------|--------------------------------------|
 | 400        | Bad Request - The request was invalid. |
 | 401        | Unauthorized - Authentication failed. |
-| 422       | Validation - Validation failed. |
+| 422        | Validation Error - Validation failed. |
 | 403        | Forbidden - You do not have access.   |
 | 404        | Not Found - The resource was not found. |
 | 500        | Internal Server Error - An unexpected error occurred. |
